fix: overflowing chips

--- a/styles/material-theme.scss
+++ b/styles/material-theme.scss
@@ -377,21 +377,22 @@ mat-label.mat-label-standalone{
     font-weight: bold;
   }
 }
-.mat-chip-list{
-  .mat-chip.mat-standard-chip{
+.mat-chip-list {
+  .mat-chip.mat-standard-chip {
+    height: unset; // Override height: 1px
+    background-color: $primaryLight;
+    overflow: hidden;
     &.indeterminate {
       background: repeating-linear-gradient(
         -45deg,
         $primaryLight,
         $primaryLight 5px,
-        rgba(0,0,0,.04) 5px,
-        rgba(0,0,0,.04) 10px
-     );
-     color: $textLight;
-    } 
-    height: unset; // Override height: 1px
-    background-color: $primaryLight;
-    .mat-chip-remove{
+        rgba(0, 0, 0, 0.04) 5px,
+        rgba(0, 0, 0, 0.04) 10px
+      );
+      color: $textLight;
+    }
+    .mat-chip-remove {
       // align somewhat townwards for better centering
       line-height: 1.05;
       color: $primary;
